syntax = "proto3";

option go_package="github.com/lightningnetwork/lnd/lspclient";
option java_outer_classname = "LspClient";

package lspclient;

message SubmarineCreateKeysResult {
  bytes preimage = 1;
  bytes payment_hash = 2;
  bytes repay_privkey = 3;
  bytes repay_pubkey = 4;
}
message SubmarineRegisterResult {
  bytes htlc_pubkey = 1;
  bytes script = 2;
  string script_address = 3;
  uint32 height = 4;
}
message SubmarineDetectResult {
  string in_txid = 1;
  int32 in_index = 2;
  int64 in_amount = 3;
  uint32 in_height = 4;
}
message SubmarineRepayData {
  bytes privkey = 1;
  bytes script = 2;
  string txid = 3;
  int32 index = 4;
  int64 amount = 5;
}
message SubmarineRepayRequest {
  repeated SubmarineRepayData data = 1;
}
message QueryRoutePaymentResult {
  string payment_hash = 1;
  int32 status = 2;
  int32 failure = 3;
}
// github.com/nayutaco/NayutaHub2LspdProto
enum IntegrityResult {
  INTEGRITYRESULT_NONE = 0;
  INTEGRITYRESULT_OK = 1;
  INTEGRITYRESULT_NG = 2;
}
